--- a/parameters.yml
+++ b/parameters.yml
@@ -3,23 +3,26 @@
 # Parameter definition for discharging simulation in 2D
 
 # Max time iteration
-T: 10
+T: 5
 # max row number
 M: 60
 # max column number
-N: 80
+N: 60
 # Electric Umbral x
-Ecx: 400
+Ecx: 2000
 # Electric Umbral y
-Ecy: 400
+Ecy: 2000
 # Max charge at init per cell
-q: 10
+q: 100
 # Percentaje of top (0, 100)
-cloud: 0.05
+cloud: 0.1
 # percent of moving charge [0, 0.25]
 k: 0.2
 # saving steps
 save: 10
+# point of charge
+x: 70
+y: 10
 
 
 
